--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,19 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    //网络请求依赖包 start
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.14-RC1'
+    //网络请求依赖包 end
+
+    //黄油刀 start
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    //黄油刀 end
+
+    //毕加索start
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    //毕加索end
 }
